link all pages together

--- a/public/pages/allAds/allAds.html
+++ b/public/pages/allAds/allAds.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="nav-item d-flex border border-2 rounded-2 border-dark my-3 ms-2">
-                        <input type="text" class="border border-0" placeholder="Find Cars, Mobile Phones more..."
+                        <input type="text" class="border border-0 ps-2" placeholder="Find Cars, Mobile Phones more..."
                             style="padding-right: 420px;">
                         <div class="bg-dark text-center text-white ">
                             <div class="p-1 px-3 fs-4">
@@ -85,7 +85,7 @@
                             <a href="" class="text-dark ">Login</a>
                         </div>
                         <div class="end2 mt-3 ms-3">
-                            <div class=" mx-4 mt-2 fw-bolder"><a class="text-dark"></a><img src="Image/asset 2.svg"
+                            <div class=" mx-4 mt-2 fw-bolder"><a class="text-dark" href="../../index.html"><img src="Image/asset 2.svg"
                                     alt="">SELL</a></div>
                         </div>
                     </div>
