--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="nav-item d-flex border border-2 rounded-2 border-dark my-3 ms-2">
-                        <input type="text" class="border border-0" placeholder="Find Cars, Mobile Phones more..."
+                        <input type="text" class="border border-0 ps-2" placeholder="Find Cars, Mobile Phones more..."
                             style="padding-right: 420px;">
                         <div class="bg-dark text-center text-white ">
                             <div class="p-1 px-3 fs-4">
