add signIn and signUp  page, apply firwbase authentication.

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,10 @@
                     </div>
                     <div class="nav-item d-flex">
                         <div class="end ms-4 mt-4 fs-5 fw-bold">
-                            <a href="" class="text-dark ">Login</a>
+                            <a href="pages/signIn/signIn.html" class="text-dark ">LogIn</a>
+                        </div>
+                        <div class="end ms-4 mt-4 fs-5 fw-bold">
+                            <a href="pages/signUp/signUp.html" class="text-dark ">SignUp</a>
                         </div>
                         <div class="end2 mt-3 ms-3">
                             <div class=" mx-4 mt-2 fw-bolder"><a class="text-dark"></a><img src="Image/asset 2.svg"
