--- a/public/pages/adDetail/adDetail.html
+++ b/public/pages/adDetail/adDetail.html
@@ -82,7 +82,10 @@
           </div>
           <div class="nav-item d-flex">
             <div class="end ms-4 mt-4 fs-5 fw-bold">
-              <a href="" class="text-dark ">Login</a>
+              <a href="../signIn/signIn.html" class="text-dark ">Login</a>
+            </div>
+            <div class="end ms-4 mt-4 fs-5 fw-bold">
+              <a href="../signUp/signUp.js" class="text-dark ">SignUp</a>
             </div>
             <div class="end2 mt-3 ms-3">
               <div class=" mx-4 mt-2 fw-bolder"><a class="text-dark" href="../../index.html"><img src="Image/asset 2.svg" alt="">SELL</a>
